# dlpack-ipc

./: .gitignore  Cargo.toml  LICENSE  buf.gen.yaml  build.rs  example.py  pyproject.toml
dlpack/v1/: dlpack.proto
format/: Tensor.fbs
python/: example.py
python/dlpack/: __init__.py  _dlpack.py  ctypes.py
python/dlpack/v1/: dlpack_pb2.py
python/v1/: dlpack_pb2.py  dlpack_pb2.pyi
src/: convert.rs  lib.rs  native.rs  py_buffer.rs  python.rs  tensor_container.rs
src/buffer/: immutable.rs  mod.rs  mutable.rs  ops.rs  python.rs
src/util/: bit_chunk_iterator.rs  mod.rs
