[package]
name = "dlpack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "dlpack"
crate-type = ["cdylib"]

[dependencies]
dlpark = {version = "^0.3.0", features = ["pyo3"]}
flatbuffers = "23.5.26"
pyo3 = "0.19.0"

[build-dependencies]
flatc-rust = "0.2.0"
